crates/biome_html_parser/tests/html_specs/ok/svelte/debug.svelte
{@debug}
{@debug something}
{@debug something, something, something}
