crates/biome_html_parser/tests/html_specs/error/svelte/debug.svelte
{@debug
{@debug something}
{@debug debug}
